fix contrast ratio

--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
@@ -64,9 +64,9 @@
 
 .btn-evaluate {
   background-color: #fff;
-  border: 1px solid var(--bs-success-600);
+  border: 1px solid var(--green);
   padding: 7px 16px !important;
-  color: var(--bs-success-600);
+  color: var(--green);
 }
 
 .btn-evaluate:hover {
